<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/suggestedGoalMessage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/suggested_goal"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/linearLayout1"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/newSuggestedGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150sp"
            android:text=""
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/suggestedGoalMessage2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/steps"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/linearLayout2"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonAcceptSuggestedGoal"
            android:layout_width="145sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="35sp"
            android:text="@string/accept"
            android:backgroundTint="#4aa71c"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/buttonSetCustomGoal"
            android:layout_width="145sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginLeft="25sp"
            android:text="@string/customize_goal"
            android:backgroundTint="#ca313b"
            android:textColor="#ffffff">
        </Button>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCancelSetGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancel"
        android:textColor="#ffffff"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        >
    </Button>

</LinearLayout>