<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activities.MainActivity"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/setGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_goal"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:id="@+id/linearLayout1"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="80sp"
            android:text="@string/yes"
            android:backgroundTint="#4aa71c"
            android:textColor="#ffffff">
        </Button>

        <Button
            android:id="@+id/buttonNotNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="40sp"
            android:backgroundTint="#ca313b"
            android:text="@string/not_now"
            android:textColor="#ffffff">
        </Button>
    </LinearLayout>

</LinearLayout>